Fix main height on tablets

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -568,7 +568,7 @@ a
 .useranswer__icon
   position: absolute
   top: -10px
-  right: 0
+  right: 5px
   width: 61px
   height: 61px
   background-repeat: no-repeat
