--- a/src/styles/project-mixins.sass
+++ b/src/styles/project-mixins.sass
@@ -38,7 +38,8 @@ $light: 300
 
 // breakpoints
 
-$breakpoint-tablet: 768px
+// $breakpoint-tablet: 768px
+$breakpoint-tablet: 720px
 $breakpoint-desktop: 960px
 
 // dimensions
